--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-better-calendar",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "A calendar component for vuejs.",
   "author": {
     "name": "Xiao Wenpeng",
@@ -23,8 +23,7 @@
   "scripts": {
     "build": "node build/build.js",
     "dev": "node build/dev-server.js",
-    "release": "bash ./build/release/publish.sh",
-    "demo-build": "node build/example/build.js"
+    "release": "bash ./build/release/publish.sh"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.1",
